fix overflow glitch with navbar

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,7 @@ nav {
 }
 
 #navContainer {
+   overflow: hidden;
    position: absolute;
    top: 0;
    right: -0;
